Revert "[#2730995] enable schedule task evenly by default."
This reverts commit 3b05b6a139ad09327991e0dbf061145c6c2d6f50.

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -246,10 +246,8 @@ common:
   bytedance.streaming.taskmanager.number-initial-percentage: 1.0
   bytedance.streaming.flink.job_api: DataStream
   bytedance.streaming.jobmanager.partition.release-during-job-execution: false
+  bytedance.streaming.cluster.evenly-spread-out-slots: true
   bytedance.streaming.execution.wait-running-on-detached: true
-  bytedance.streaming.cluster.evenly-spread-out-slots: false
-  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
-  bytedance.streaming.slot-pool.round-robin: true
 
   # hdfs conf for checkpoint
   flink.checkpoint.hdfs.dfs.datanode.socket.write.timeout: 30000
@@ -312,6 +310,9 @@ lepad:
   state.backend.cache.avgGcTimeThreshold: 3000
   state.backend.cache.maxGcTimeThreshold: 10000
   state.backend.cache.lowHeapThreshold: 0.4
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
 
 larva:
   dc: cn
@@ -350,6 +351,9 @@ leser:
   checkpoint.hdfs.prefix: hdfs://hdfsvip/home/byte_flink_checkpoint_20210220
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   yarn.provided.lib.dirs.enabled: true
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
 
 lobst:
   dc: cn
@@ -389,6 +393,9 @@ horse:
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   bytedance.streaming.yarn.check.application.name.unique.region: true
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
 
 hibis:
   dc: cn
@@ -465,6 +472,9 @@ quoka:
   ipv6.enabled: true
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
   state.backend.cache.enable: true
   state.backend.cache.maxHeapSize: 1g
   state.backend.cache.blockSize: 4m
@@ -489,6 +499,9 @@ quaga:
   ipv6.enabled: true
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
 
 quele:
   dc: cn
@@ -775,6 +788,9 @@ boe:
   table.exec.hive.permission-check.enabled: false
   yarn.provided.lib.dirs.enabled: false
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  bytedance.streaming.cluster.evenly-spread-out-slots: false
+  bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
+  bytedance.streaming.slot-pool.round-robin: true
   flink.cloud-shuffle-service.support: false
 
 cof:
