[#3040259] remove jackson depence in pyjstorm

--- a/flink-contrib/flink-python-byted/pom.xml
+++ b/flink-contrib/flink-python-byted/pom.xml
@@ -127,6 +127,10 @@ under the License.
 					<artifactId>slf4j-log4j12</artifactId>
 					<groupId>org.slf4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>jackson-annotations</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
