[#3026838] relocate kubrenetes client package to avoid package conflict

--- a/flink-kubernetes/pom.xml
+++ b/flink-kubernetes/pom.xml
@@ -166,6 +166,10 @@ under the License.
 							</filters>
 							<relocations>
 								<relocation>
+									<pattern>io.fabric8.kubernetes</pattern>
+									<shadedPattern>org.apache.flink.kubernetes.shaded.io.fabric8.kubernetes</shadedPattern>
+								</relocation>
+								<relocation>
 									<pattern>com.fasterxml.jackson</pattern>
 									<shadedPattern>org.apache.flink.kubernetes.shaded.com.fasterxml.jackson</shadedPattern>
 								</relocation>
