[#2920661][es] Fix thread hangs after failover in bulk flushing

--- a/flink-connectors/flink-connector-elasticsearch7/pom.xml
+++ b/flink-connectors/flink-connector-elasticsearch7/pom.xml
@@ -68,10 +68,14 @@ under the License.
 			https://issues.apache.org/jira/browse/HTTPCORE-446
 		 -->
 
+		<!--
+		See: https://stackoverflow.com/questions/59714835/connectionclosedexception-while-using-elastic-resthighlevelclient-bulk-request
+		The core problem is flink parent's dependencyManagement overrides httpcore's version to 4.4.6.
+		-->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.4.7</version>
+			<version>4.4.12</version>
 		</dependency>
 
 		<dependency>
