[#2926678] Fix opentsdb reporter whitelist format error.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -71,7 +71,7 @@ global:
         nettyShuffleOutputBytes,
         nettyShuffleInputBytes,
         cloudShuffleOutputBytes,
-        cloudShuffleInputBytes
+        cloudShuffleInputBytes,
         allocateFromAvailableFailedNumber
     ]
 
