--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -412,6 +412,7 @@ horse:
   state.backend.cache.avgGcTimeThreshold: 3000
   state.backend.cache.maxGcTimeThreshold: 10000
   state.backend.cache.lowHeapThreshold: 0.4
+  execution.cancellation.timeout.enable: true
 
 hibis:
   dc: cn
@@ -419,6 +420,7 @@ hibis:
   high-availability.zookeeper.quorum: 10.226.128.46:2181,10.226.128.80:2181,10.226.128.67:2181,10.226.128.74:2181,10.226.128.64:2181
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  execution.cancellation.timeout.enable: true
 
 topi:
   dc: cn
