--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -808,7 +808,7 @@ snake:
   dc: sg
   clusterName: snake
   high-availability.zookeeper.quorum: 10.245.24.23:2181,10.245.30.27:2181,10.245.30.47:2181,10.245.9.27:2181,10.245.9.34:2181
-  hdfs.prefix: hdfs://harunaoci/flink_sg_sg1
+  hdfs.prefix: hdfs://harunasg/flink_sg_sg1
   checkpoint.hdfs.prefix: hdfs://harunasg/home/byte_flink_checkpoint_alisg
   dashboard.data_source: bytetsd_alisg
   dtop.data_source: dtop_alisg
