--- a/flink-metrics/flink-metrics-databus/pom.xml
+++ b/flink-metrics/flink-metrics-databus/pom.xml
@@ -32,7 +32,7 @@ under the License.
 	<artifactId>flink-metrics-databus</artifactId>
 
 	<properties>
-		<logging.version>1.0.1-beta.3-SNAPSHOT</logging.version>
+		<logging.version>1.0.1-5-SNAPSHOT</logging.version>
 	</properties>
 
 	<dependencies>
