--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -280,6 +280,18 @@ common:
   flink.cloud-shuffle-service.support: true
   flink.cloud-shuffle-service.coordinator.url: http://css-coordinator.byted.org
 
+  # stateBackend cache layer
+  state.backend.cache.enable: true
+  state.backend.cache.maxHeapSize: 1g
+  state.backend.cache.blockSize: 4m
+  state.backend.cache.initial.size: 4m
+  state.backend.cache.maxSize: 64m
+  state.backend.cache.scale.enable: true
+  state.backend.cache.gcCountThreshold: 40
+  state.backend.cache.avgGcTimeThreshold: 3000
+  state.backend.cache.maxGcTimeThreshold: 10000
+  state.backend.cache.lowHeapThreshold: 0.4
+
 # yarn clusters
 flink:
   dc: cn
@@ -296,16 +308,6 @@ dw:
   hdfs.prefix: hdfs://haruna/flink_lf
   checkpoint.hdfs.prefix: hdfs://hdfsvip/home/byte_flink_checkpoint_20210220
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
 
 lepad:
   dc: cn
@@ -315,16 +317,6 @@ lepad:
   checkpoint.hdfs.prefix: hdfs://hdfsvip/home/byte_flink_checkpoint_20210220
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   bytedance.streaming.yarn.check.application.name.unique.region: true
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
 
 larva:
   dc: cn
@@ -404,16 +396,6 @@ horse:
   checkpoint.hdfs.prefix: hdfs://hdfsvip/home/byte_flink_checkpoint_20210220
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   bytedance.streaming.yarn.check.application.name.unique.region: true
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
   execution.cancellation.timeout.enable: true
 
 hibis:
@@ -502,16 +484,6 @@ quoka:
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   ipv6.enabled: true
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
   restart-strategy.recoverable-failure-rate.fallback-global-restart: true
   restart-strategy.recoverable-failure-rate.enable: true
   execution.cancellation.timeout.enable: true
@@ -607,16 +579,6 @@ marmt:
   bytedance.streaming.yarn.check.application.name.unique.region: true
   yarn.provided.lib.dirs.enabled: false
   flink.cloud-shuffle-service.support: false
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
 
 macaw:
   dc: va
@@ -795,16 +757,6 @@ sloth:
   table.exec.hive.permission-check.gemini-server-url: http://gemini-sg.byted.org/api/query/sg/verifyUsersPrivilege
   bytedance.streaming.yarn.check.application.name.unique.region: true
   flink.cloud-shuffle-service.support: false
-  state.backend.cache.enable: true
-  state.backend.cache.maxHeapSize: 1g
-  state.backend.cache.blockSize: 4m
-  state.backend.cache.initial.size: 4m
-  state.backend.cache.maxSize: 64m
-  state.backend.cache.scale.enable: true
-  state.backend.cache.gcCountThreshold: 40
-  state.backend.cache.avgGcTimeThreshold: 3000
-  state.backend.cache.maxGcTimeThreshold: 10000
-  state.backend.cache.lowHeapThreshold: 0.4
 
 snake:
   dc: sg
