--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -72,7 +72,8 @@ global:
         nettyShuffleInputBytes,
         cloudShuffleOutputBytes,
         cloudShuffleInputBytes,
-        allocateFromAvailableFailedNumber
+        allocateFromAvailableFailedNumber,
+        numberOfDiscardExpiredCheckpointFolder
     ]
 
 non-global:
