[#3166092] Fix SlotPool request more slots than job needed when AM Failover.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -73,7 +73,8 @@ global:
         cloudShuffleOutputBytes,
         cloudShuffleInputBytes,
         allocateFromAvailableFailedNumber,
-        numberOfDiscardExpiredCheckpointFolder
+        numberOfDiscardExpiredCheckpointFolder,
+        numJobRequiredWorkers
     ]
 
 non-global:
