--- a/flink-connectors/flink-connector-rocketmq/pom.xml
+++ b/flink-connectors/flink-connector-rocketmq/pom.xml
@@ -33,7 +33,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>java-rocketmq-client2</artifactId>
-			<version>1.0.21</version>
+			<version>1.0.18-TEST1-FLINK</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>logback-classic</artifactId>
