[#3352087] Flink UI supports jumping to the StreamLog platform. [skipped]

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -104,6 +104,8 @@ common:
   kubernetes.deployment.annotations: "pod.tce.kubernetes.io/mountHostPath:true"
   kubernetes.container.work.dir: /opt/tiger/workdir
   kubernetes.web-shell.enabled: true
+  kubernetes.stream-log.enabled: true
+  kubernetes.stream-log.domain: "cloud.bytedance.net"
 
   pipeline.download-template: "/opt/tiger/flink_deploy/bin/flink download -src '%files%' -dest %target% > /var/log/tiger/flink-download.log 2>&1"
   pipeline.file-mounted-path: /opt/tiger/workdir
