[#3231657] Optimize loading of checkpoint metadata.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -76,7 +76,8 @@ global:
         numberOfDiscardExpiredCheckpointFolder,
         numJobRequiredWorkers,
         numberOfRecoverSuccess,
-        numberOfRecoverFailed
+        numberOfRecoverFailed,
+        numberOfCheckpointPlaceholderTransformed
     ]
 
 non-global:
