--- a/flink-metrics/flink-metrics-opentsdb/src/test/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/test/resources/metrics-whitelist.yaml
@@ -146,3 +146,11 @@ non-global:
         stateMaxKeySize,
         stateMaxValueSize
     ]
+
+report-during-unregister:
+  name:
+    [
+        numberOfHdfsRetries,
+        numberOfRecoverSuccess,
+        numberOfRecoverFailed
+    ]
