--- a/flink-dist/src/main/flink-bin/htap_confs/conf_m05/flink-conf.yaml
+++ b/flink-dist/src/main/flink-bin/htap_confs/conf_m05/flink-conf.yaml
@@ -44,6 +44,8 @@ common:
   metrics.reporter.opentsdb_reporter.class: org.apache.flink.metrics.opentsdb.OpentsdbReporter
   metrics.reporter.opentsdb_reporter.interval: 20 SECONDS
   metrics.reporter.opentsdb_reporter.prefix: m05flink
+  metrics.reporter.opentsdb_reporter.whitelist_file: metrics-whitelist-htap.yaml
+  metrics.reporter.opentsdb_reporter.fixed_tags: htap_cluster=m05flink
 
   # The failover strategy, i.e., how the job computation recovers from task failures.
   # Only restart tasks that may have been affected by the task failure, which typically includes
