--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -205,6 +205,10 @@ common:
   blacklist.failure-timeout: "20 min"
   blacklist.check-interval: "1 min"
 
+  # am failover recovery
+  yarn.previous-container.as-pending-container: false
+  taskmanager.release-slot-when-job-master-disconnected.enabled: false
+
   # Table & SQL configurations.
   # validate before execute, e.g. hive permission check.
   table.exec.validate-before-execute: true
@@ -693,6 +697,8 @@ quoka:
   state.backend.rocksdb.max-disk-size-in-progress: 30gb
   stat.backend.rocksdb.max-sst-size-for-sstWriter: 64mb
   bytedance.streaming.yarn.check.application.name.unique.region: true
+  yarn.previous-container.as-pending-container: true
+  taskmanager.release-slot-when-job-master-disconnected.enabled: true
 
 quaga:
   dc: cn
@@ -703,6 +709,8 @@ quaga:
   bytedance.streaming.yarn.gang-scheduler.container-descheduler.enable: true
   ipv6.enabled: true
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  yarn.previous-container.as-pending-container: true
+  taskmanager.release-slot-when-job-master-disconnected.enabled: true
 
 quele:
   dc: cn
