[#2957211] feat: add partition level metrics for kafka connector 0.10

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -146,6 +146,10 @@ non-global:
       # kafka latency
         fetch-latency-avg,
         fetch-latency-max,
+        min-fetch-latency-avg,
+        min-fetch-latency-max,
+      # kafka poll interval
+        poll_interval,
       # Network Memory
         TotalMemorySegments,
         AllocatedMemorySegments,
